@@ -3,6 +3,10 @@ debci (0.10.3) unstable; urgency=medium
   [ Brandon Fairchild ]
   * handle old test run data that didn't have a run_id.
 
+  [ Antonio Terceiro ]
+  * debci-status: fix generation of packages status file which was incorrectly
+    repeating the status for the very first package over and over.
+
  -- Antonio Terceiro <terceiro@debian.org>  Tue, 14 Oct 2014 18:55:27 -0300
 
 debci (0.10.2) unstable; urgency=medium
